$Id$

Changes between 0.1.4 and 0.1.5:
--------------------------------

  * src/tables/eit*: EIT decoder (no generator yet)
  * 0x55 (dvb parental rating) descriptor decoder
  * fixed a segfault in the subtitles descriptor decoder

Changes between 0.1.3 and 0.1.4:
--------------------------------

  * 0x59 (dvb subtitles) descriptor decoder
  * memory leak fix
  * fixed an unitialiazed pointer

Changes between 0.1.2 and 0.1.3:
--------------------------------

  * fixed segfault with invalid/corrupted psi data
  * update spec file
  * src/descriptors/*: fixed some typos
  * misc/*: added tests on the new descriptors
  * src/descriptors/*: added a few DVB descriptors decoder and generator
    (Stuffing, Bouquet Name, Service Name)
  * src/demux.*: DVB PSI tables demux, required since one PID channel
    may contain different tables.
  * src/tables/sdt*: SDT decoder (no generator yet)
  * examples/decode_sdt.c: added SDT decoder example

Changes between 0.1.1 and 0.1.2:
--------------------------------

  * Makefile.am: added bootstrap to the distribution.
  * bootstrap: we remove generated files before running the autotools, to
    make sure we get the latest version.
  * bootstrap, Makefile.am: moved the --foreign flag to Makefile.am.
  * src/Makefile.am: renamed an unused _SOURCES variable to something
    automake will not choke on.
  * configure.ac, bootstrap: removed redundant stuff from CVS such as the
    Makefile.in files, configure and config.*, and added a bootstrap script
    to generate them; renamed configure.in to configure.ac and moved config.h
    to . because it's now the recommended practice.
  * src/dvbpsi.h: removed automatic inclusion of inttypes.h because it was
    too platform-dependent and led to lots of cross-compilation problems. Now
    the program using libdvbpsi has to make sure it is C99 compliant.
  * configure.in, ltmain.sh: fixes for Solaris, mingw and Mac OS X.